test/tests/stages/11_long_integers/valid/implicit_casts/long_constants.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CS: 
              CIf: 
                CBinary: 
                  CLessThan: 
                  CBinary: 
                    CAdd: 
                    CConstant: 
                      CConstLong: 
                        TLong: 2147483647
                      None: 
                    CConstant: 
                      CConstLong: 
                        TLong: 2147483647
                      None: 
                    None: 
                  CConstant: 
                    CConstLong: 
                      TLong: 0
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CLessThan: 
                  CConstant: 
                    CConstLong: 
                      TLong: 19327352832
                    None: 
                  CConstant: 
                    CConstLong: 
                      TLong: 100
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
